--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="mobile-web-app-capable" content="yes">
     
-    <!-- Placeholder Icons (In a real app, these would be local files) -->
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3063/3063176.png">
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/3063/3063176.png">
+    <!-- Updated Icons -->
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2297/2297087.png">
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2297/2297087.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -53,9 +53,9 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "@react-three/fiber": "https://aistudiocdn.com/@react-three/fiber@^9.4.2",
     "@react-three/drei": "https://aistudiocdn.com/@react-three/drei@^10.7.7",
